# image-platform

./: README.md  app.py  app1.py  pyproject.toml  requirements.txt
litellm/: docker-compose.yaml  litellm_config.yaml
models/: model.py
utils/: client.py
